[package]
name = "prike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.25.0", features = ["serialize"] }
serde = { version = "1.0.145", features = ["derive"] }
csv = "1.0.0-beta.1"